# django_otp

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
authorize/: admin.py  apps.py  authentication.py  helpers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
authorize/management/commands/: celery.py
django_otp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: test_create_otp.py  test_register_uer.py
