[tool.poetry]
name = "django-otp"
version = "0.1.0"
description = "web application"
authors = ["parisa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
asgiref = "3.8.1"
django = "4.2.13"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "5.3.1"
pyjwt = "2.8.0"
pyotp = "2.9.0"
sqlparse = "0.5.0"
typing-extensions = "4.11.0"
pytest-django = "4.8.0"
pytest = "8.3.1"
celery = "5.4.0"
amqp = "5.2.0"
flower = "=2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
